Correcting button alignment issues on main page as well as 'a href' links in homepage menu

--- a/home_style.css
+++ b/home_style.css
@@ -1,4 +1,4 @@
-/*
+//*
  The animation code
 @keyframes one {
     0% {background-color: #66ffff; right: 2px; bottom: 100px;}
@@ -73,19 +73,25 @@ nav {
   animation: drop_animation 2.5s ease-in-out;
 }
 
+.homepage_menu {
+  text-align: center;
+}
+
 button {
-  border: 5px solid transparent;
+  border: 1px solid white;
   font-family: 'Work Sans', sans-serif;
   text-transform: uppercase;
   font-size: .5em;
   text-align: center;
-  background: #ffaa80;
+  vertical-align: middle;
+  background: transparent;
   color: white;
   border-radius: 10px;
-  padding: 1em;
+  padding-left: 1em;
   margin: 1em;
   overflow: hidden;
   width: 8em;
+  height: 4em;
   transition:
     all        1.2s,
     box-shadow 0.3s 1.5s;
@@ -105,10 +111,10 @@ span {
 
   button:hover {
     text-indent: -330px;
-    background: white;
+    background: rgba(83,218,217, .5);
     color: #53dad9;
     width: 8em;
-    transition: 0.7s ease;
+    transition: 0.7s ease-in;
     word-spacing: 0;
   }
 
